<resources>
    <string name="app_name">ElcCommerce</string>
    <string name="home">首页</string>
    <string name="cart">购物车</string>
    <string name="store">店铺</string>
    <string name="my">我的</string>
    <string name="search">搜索</string>
    <string name="guangzhou">广州</string>
    <string name="price">¥</string>
    <string name="share">分享</string>
    <string name="evaluation">商品评价</string>
    <string name="more_evaluation">查看全部评价</string>
    <string name="store_evaluation">等级评价</string>
    <string name="nametext">日本原装三菱UM-100 0.5mm 中性笔 UM100 三菱水笔10支盒装包邮</string>
    <string name="all_goods">进店逛逛</string>
    <string name="add_cart">加入购物车</string>
    <string name="purchase_imm">立即购买</string>
    <string name="frgme_title">我的Elc</string>
    <string name="userloginAct_et">你的手机号码</string>
    <string name="userloginAct_pass">密码</string>
    <string name="goods_message">商品信息</string>
    <string name="deldete">删除</string>
    <string name="now_logining">正在登录......</string>
    <string name="login">登录</string>
    <string name="forgotpassword">忘记密码？</string>
    <string name="signin">注册新帐号</string>
    <string name="goods_receiver">收货人:</string>
    <string name="receiver_address">收货地址:</string>
    <string name="confirm_order">确认订单</string>
    <string name="dispatch_way_label">配送方式</string>
    <string name="dispatch_time_label">配送时间</string>
    <string name="dispatch_time">工作日、双休日均可</string>
    <string name="dispatch_cost_label">配送费用</string>
    <string name="dispatch_cost">免邮</string>
    <string name="bill_info_label">发票信息</string>
    <string name="bill_info">电子发票</string>
    <string name="place_order">立即下单</string>
    <string name="total_amount">合计：</string>
    <string name="dispatch_way">配送方式</string>
    <string name="dispatch">快递免邮</string>
    <string name="purchase_number">购买数量</string>
    <string name="sure">确定</string>
    <string name="express">快递: 免运费</string>
    <string name="orderact_title">我的订单</string>
    <string name="add_success">加入购物车成功</string>
    <string name="add_fail">加入购物车失败</string>
    <string name="no_comments">该商品暂无评论</string>
    <string name="enter_store">进入店铺</string>
    <string name="store_all">全部</string>
    <string name="store_sales">销量</string>
    <string name="store_grade">等级</string>
    <string name="save">保存</string>
    <string name="concrete_position">详细地址</string>
    <string name="receiver_tel">联系方式</string>
    <string name="receiver_position">收货地址</string>
    <string name="select"><![CDATA[请选择 >]]></string>
    <string name="set_default_address">设为默认地址</string>
    <string name="money_mark">¥</string>
    <string name="default_address">默认地址</string>
    <string name="edit">编辑</string>
    <string name="orderDetail">订单详情</string>
</resources>
