<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:text="@string/confirm_order"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:background="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/tv_receiver_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="18sp"
                    android:text="@string/goods_receiver"/>

                <TextView
                    android:id="@+id/tv_receiver_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_receiver_label"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:id="@+id/tv_receiver_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp" />

                <TextView
                    android:id="@+id/tv_address_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_receiver_label"
                    android:layout_marginLeft="10dp"
                    android:text="@string/receiver_address"/>

                <TextView
                    android:id="@+id/tv_receiver_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_address_label"/>

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_receiver_goods"
                android:background="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:background="@color/colorWhite"
                android:layout_marginTop="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:text="@string/dispatch_way_label"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:text="@string/dispatch_way"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:background="@color/colorWhite"
                android:layout_marginTop="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:text="@string/dispatch_time_label"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:text="@string/dispatch_time"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:background="@color/colorWhite"
                android:layout_marginTop="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:text="@string/dispatch_cost_label"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:text="@string/dispatch_cost"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:background="@color/colorWhite"
                android:layout_marginTop="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="5dp"
                    android:text="@string/bill_info_label"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:text="@string/bill_info"/>

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true">

        <View
            android:id="@+id/order_divider"
            android:layout_width="match_parent"
            android:layout_height="1.0px"
            android:layout_alignParentTop="true"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/btn_place_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/order_divider"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/place_order"/>

        <TextView
            android:id="@+id/tv_money_amount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:layout_toLeftOf="@+id/btn_place_order"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_toLeftOf="@+id/tv_money_amount"
            android:text="@string/total_amount"/>
    </RelativeLayout>

</LinearLayout>
