<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:textSize="16sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="添加新地址"/>

        <TextView
            android:id="@+id/tv_save_newAddress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/save"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/goods_receiver"/>

        <EditText
            android:id="@+id/et_receiver_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_weight="1" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:layout_alignParentTop="true"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/receiver_tel"/>

        <EditText
            android:id="@+id/et_receiver_tel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_weight="1" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:layout_alignParentTop="true"
        android:background="@android:color/darker_gray" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/receiver_position"/>

        <TextView
            android:id="@+id/tv_receiver_position"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:text="@string/select"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:layout_alignParentTop="true"
        android:background="@android:color/darker_gray" />

    <EditText
        android:id="@+id/et_receiver_concrete_position"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/concrete_position" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/set_default_address"/>

        <CheckBox
            android:id="@+id/chk_set_default_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp" />

    </RelativeLayout>





</LinearLayout>
