<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"              android:layout_width="match_parent"                android:fitsSystemWindows="true"    android:background="@color/colorLightGray"                android:clipToPadding="true"              android:layout_height="match_parent">    <include layout="@layout/title"/>            <android.support.v7.widget.RecyclerView                android:layout_marginTop="40dp"                android:id="@+id/goods_content"                android:layout_width="match_parent"                android:layout_height="wrap_content"/>    <LinearLayout        android:visibility="gone"        android:id="@+id/add_cart_true"        android:layout_centerInParent="true"        android:orientation="vertical"        android:layout_width="120dp"        android:layout_height="80dp"        android:background="@drawable/textview_shape">        <ImageView            android:layout_marginTop="5dp"            android:layout_gravity="center_horizontal"            android:src="@mipmap/yes"            android:layout_width="40dp"            android:layout_height="40dp"/>        <TextView            android:layout_marginTop="5dp"            android:layout_gravity="center_horizontal"            android:layout_centerInParent="true"            android:text="@string/add_success"            android:layout_width="wrap_content"            android:layout_height="wrap_content"/>    </LinearLayout>    <LinearLayout        android:visibility="gone"        android:id="@+id/add_cart_false"        android:layout_centerInParent="true"        android:orientation="vertical"        android:layout_width="120dp"        android:layout_height="80dp"        android:background="@drawable/textview_shape">        <ImageView            android:layout_marginTop="5dp"            android:layout_gravity="center_horizontal"            android:src="@mipmap/unsuccess"            android:layout_width="40dp"            android:layout_height="40dp"/>        <TextView            android:layout_marginTop="5dp"            android:layout_gravity="center_horizontal"            android:layout_centerInParent="true"            android:text="@string/add_fail"            android:layout_width="wrap_content"            android:layout_height="wrap_content"/>    </LinearLayout>    <RelativeLayout        android:id="@+id/hey"        android:background="@color/colorWhite"        android:layout_alignParentBottom="true"        android:layout_width="match_parent"        android:layout_height="40dp">        <View            android:layout_width="match_parent"            android:layout_height="1.0px"            android:layout_alignParentTop="true"            android:background="@color/colorGray" />        <TextView            android:gravity="center"            android:id="@+id/add_cart"            android:layout_toLeftOf="@+id/purchase_imm"            android:text="@string/add_cart"            android:background="@color/colorRed"            android:textColor="@color/colorWhite"            android:layout_width="100dp"            android:layout_height="match_parent"/>        <TextView            android:gravity="center"            android:id="@+id/purchase_imm"            android:layout_alignParentRight="true"            android:text="@string/purchase_imm"            android:background="@color/colorPrimaryDark"            android:textColor="@color/colorWhite"            android:layout_width="100dp"            android:layout_height="match_parent"/>    </RelativeLayout></RelativeLayout>