<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"              android:orientation="vertical"              android:layout_width="match_parent"              android:layout_height="wrap_content">    <RelativeLayout        android:background="@color/colorWhite"        android:layout_width="match_parent"        android:padding="13dp"        android:layout_height="wrap_content">        <TextView            android:id="@+id/goods_name"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:textSize="15sp"            android:textColor="@color/colorBlack"            />        <TextView            android:textColor="@color/colorPrimary"            android:textSize="19sp"            android:layout_marginTop="10dp"            android:layout_below="@+id/goods_name"            android:text="@string/price"            android:layout_width="wrap_content"            android:layout_height="wrap_content"/>        <TextView            android:id="@+id/goods_price"            android:textColor="@color/colorPrimary"            android:textSize="19sp"            android:layout_marginTop="10dp"            android:layout_marginLeft="15dp"            android:layout_below="@+id/goods_name"            android:layout_width="wrap_content"            android:layout_height="wrap_content"/>        <TextView            android:textSize="11sp"            android:layout_marginTop="10dp"            android:text="@string/express"            android:layout_below="@+id/goods_price"            android:layout_width="wrap_content"            android:layout_height="wrap_content"/>        <TextView            android:id="@+id/goods_sales"            android:textSize="11sp"            android:layout_marginTop="10dp"            android:layout_centerHorizontal="true"            android:layout_below="@+id/goods_price"            android:layout_width="wrap_content"            android:layout_height="wrap_content"/>        <TextView            android:layout_alignParentRight="true"            android:id="@+id/goods_area"            android:textSize="11sp"            android:layout_marginTop="10dp"            android:layout_below="@+id/goods_price"            android:layout_width="wrap_content"            android:layout_height="wrap_content"/>    </RelativeLayout>    <RelativeLayout        android:visibility="gone"        android:id="@+id/comment_no"        android:layout_marginTop="10dp"        android:background="@color/colorWhite"        android:padding="13dp"        android:layout_width="match_parent"        android:layout_height="wrap_content">    <TextView        android:textSize="13sp"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:text="@string/no_comments"/>    </RelativeLayout>    <RelativeLayout        android:id="@+id/comment_yes"        android:layout_marginTop="10dp"        android:background="@color/colorWhite"        android:padding="13dp"        android:layout_width="match_parent"        android:layout_height="wrap_content">        <TextView            android:textSize="13sp"            android:text="@string/evaluation"            android:textColor="@color/colorBlack"            android:layout_width="wrap_content"            android:layout_height="wrap_content"/>        <com.android.tkengine.elccommerce.utils.CircleImageView            android:layout_marginTop="25dp"            android:id="@+id/goods_evaluation_icon"            android:layout_width="30dp"            android:layout_height="30dp"/>        <TextView            android:layout_marginLeft="10dp"            android:layout_marginTop="35dp"            android:id="@+id/goods_evaluation_name"            android:layout_toRightOf="@+id/goods_evaluation_icon"            android:layout_width="wrap_content"            android:textSize="12sp"            android:layout_height="wrap_content"/>        <TextView            android:textSize="12sp"            android:id="@+id/goods_evaluation_time"            android:layout_alignParentRight="true"            android:layout_marginRight="10dp"            android:layout_marginTop="35dp"            android:layout_width="wrap_content"            android:layout_height="wrap_content"/>        <RatingBar            android:id="@+id/goods_grade"            android:layout_below="@+id/goods_evaluation_content"            android:layout_marginTop="10dp"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:numStars="5"            android:rating="5"            android:isIndicator="true"            android:stepSize="1"            style="@style/Base.Widget.AppCompat.RatingBar.Small"/>        <TextView            android:layout_marginTop="10dp"            android:id="@+id/goods_evaluation_content"            android:layout_below="@+id/goods_evaluation_icon"            android:layout_width="wrap_content"            android:lines="2"            android:textSize="12sp"            android:layout_height="wrap_content"/>        <Button            android:background="@drawable/button_shape"            android:layout_centerHorizontal="true"            android:layout_marginTop="10dp"            android:layout_below="@+id/goods_grade"            android:id="@+id/all_evaluation"            android:text="@string/more_evaluation"            android:textSize="12sp"            android:layout_width="100dp"            android:textColor="@color/colorPrimary"            android:layout_height="25dp"/>    </RelativeLayout>    <RelativeLayout        android:layout_marginTop="10dp"        android:background="@color/colorWhite"        android:padding="13dp"        android:layout_width="match_parent"        android:layout_height="wrap_content">        <ImageView            android:id="@+id/goods_store_icon"            android:layout_width="80dp"            android:layout_height="80dp"            />        <TextView            android:layout_marginTop="12dp"            android:id="@+id/goods_store_name"            android:layout_marginLeft="10dp"            android:textSize="15sp"            android:layout_toRightOf="@+id/goods_store_icon"            android:textColor="@color/colorBlack"            android:layout_width="wrap_content"            android:layout_height="wrap_content"/>        <RatingBar            android:id="@+id/goods_store_grade"            android:layout_toRightOf="@+id/goods_store_icon"            android:layout_marginLeft="10dp"            android:layout_below="@+id/goods_store_name"            android:layout_marginTop="10dp"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:numStars="5"            android:rating="5"            android:isIndicator="true"            android:stepSize="1"            style="@style/Base.Widget.AppCompat.RatingBar.Small"/>        <Button            android:background="@drawable/button_shape"            android:layout_alignParentRight="true"            android:layout_marginRight="10dp"            android:layout_marginTop="15dp"            android:layout_below="@+id/goods_store_grade"            android:id="@+id/all_goods"            android:text="@string/all_goods"            android:textSize="12sp"            android:layout_width="80dp"            android:textColor="@color/colorPrimary"            android:layout_height="25dp"/>    </RelativeLayout>    <RelativeLayout        android:layout_marginTop="10dp"        android:background="@color/colorWhite"        android:padding="13dp"        android:layout_width="match_parent"        android:layout_height="wrap_content">        <TextView            android:text="@string/goods_message"            android:textColor="@color/colorBlack"            android:textSize="13sp"            android:layout_width="match_parent"            android:layout_height="wrap_content"/>        <TextView            android:id="@+id/goods_message"            android:padding="10dp"            android:textSize="12sp"            android:layout_marginTop="25dp"            android:layout_marginBottom="10dp"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:background="@color/colorLightGray"/>    </RelativeLayout></LinearLayout>