<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_loginAct"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textSize="16sp"
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="店铺"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>
    <View android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@color/colorWhite"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:id="@+id/store_list_add_all"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/store_all"/>
        <TextView
            android:id="@+id/store_list_by_sales"
            android:textColor="@color/colorBlack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/store_sales"/>
        <TextView
            android:id="@+id/store_list_by_grade"
            android:textColor="@color/colorBlack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/store_grade"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:background="@android:color/darker_gray" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/shop_rlv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_marginTop="170dp"
        android:id="@+id/shop_nonet"
        android:visibility="invisible"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_gravity="center"
            android:src="@mipmap/nonet"
            android:layout_width="80dp"
            android:layout_height="80dp" />
        <TextView
            android:textSize="18sp"
            android:text="下拉刷新"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
    </LinearLayout>
</LinearLayout>